--- a/Teraoka/Controllers/NewOrderController/NewOrderController.xib
+++ b/Teraoka/Controllers/NewOrderController/NewOrderController.xib
@@ -42,20 +42,20 @@
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-Un-Ufk">
-                    <rect key="frame" x="100" y="186" width="1166" height="652"/>
+                    <rect key="frame" x="258" y="186" width="850" height="652"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_incisor" translatesAutoresizingMaskIntoConstraints="NO" id="XmR-yM-UYp">
-                            <rect key="frame" x="-1" y="0.0" width="1167" height="652"/>
+                            <rect key="frame" x="-1" y="0.0" width="851" height="652"/>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="83H-3y-f4y">
-                            <rect key="frame" x="0.0" y="0.0" width="1166" height="10"/>
+                            <rect key="frame" x="0.0" y="0.0" width="850" height="10"/>
                             <color key="backgroundColor" red="0.2196078431372549" green="0.74509803921568629" blue="0.6470588235294118" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="10" id="K8D-ae-v9z"/>
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ecf-b4-sb3">
-                            <rect key="frame" x="0.0" y="122" width="1166" height="420"/>
+                            <rect key="frame" x="0.0" y="122" width="850" height="420"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="420" id="AbQ-2e-cHo"/>
@@ -63,7 +63,7 @@
                             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </tableView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bMw-8G-hSS">
-                            <rect key="frame" x="0.0" y="542" width="1166" height="85"/>
+                            <rect key="frame" x="0.0" y="542" width="850" height="85"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uaU-jv-Tdd">
                                     <rect key="frame" x="50" y="12" width="347.5" height="70"/>
@@ -84,7 +84,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HHj-98-OBE">
-                                    <rect key="frame" x="768.5" y="12" width="347.5" height="70"/>
+                                    <rect key="frame" x="452.5" y="12" width="347.5" height="70"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="HHj-98-OBE" secondAttribute="height" multiplier="720:145" id="2DI-pF-iVs"/>
                                         <constraint firstAttribute="height" constant="70" id="T2h-nE-mzC"/>
@@ -96,7 +96,7 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add to cart" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nN9-mL-x41">
-                                    <rect key="frame" x="871.5" y="34" width="112.5" height="26"/>
+                                    <rect key="frame" x="555.5" y="34" width="112.5" height="26"/>
                                     <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="22"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -116,7 +116,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cEH-3e-0jE">
-                            <rect key="frame" x="0.0" y="10" width="1166" height="112"/>
+                            <rect key="frame" x="0.0" y="10" width="850" height="112"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_product_image" translatesAutoresizingMaskIntoConstraints="NO" id="EXq-Ma-KGd">
                                     <rect key="frame" x="0.0" y="0.0" width="127.5" height="112"/>
@@ -137,7 +137,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7RZ-ow-Jhy">
-                                    <rect key="frame" x="1016" y="31" width="100" height="50"/>
+                                    <rect key="frame" x="700" y="31" width="100" height="50"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KMP-u7-mjK">
                                             <rect key="frame" x="25" y="0.0" width="75" height="50"/>
@@ -166,7 +166,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XFd-3M-zR6">
-                                    <rect key="frame" x="851" y="31" width="100" height="50"/>
+                                    <rect key="frame" x="535" y="31" width="100" height="50"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nRu-7P-wc8">
                                             <rect key="frame" x="0.0" y="0.0" width="75" height="50"/>
@@ -195,7 +195,7 @@
                                     </constraints>
                                 </view>
                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9PP-ZF-u5j" customClass="TextfieldCustom">
-                                    <rect key="frame" x="926" y="31" width="115" height="50"/>
+                                    <rect key="frame" x="610" y="31" width="115" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="11V-kZ-Fuz"/>
                                         <constraint firstAttribute="width" constant="115" id="CgI-nQ-N9N"/>
@@ -243,14 +243,14 @@
                         <constraint firstAttribute="bottom" secondItem="XmR-yM-UYp" secondAttribute="bottom" id="qjQ-gw-qCq"/>
                         <constraint firstItem="XmR-yM-UYp" firstAttribute="top" secondItem="QCf-Un-Ufk" secondAttribute="top" id="upn-h1-A0t"/>
                         <constraint firstAttribute="trailing" secondItem="XmR-yM-UYp" secondAttribute="trailing" id="vyJ-N7-zmW"/>
+                        <constraint firstAttribute="width" constant="850" id="xdI-J5-cic"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="QCf-Un-Ufk" secondAttribute="trailing" constant="100" id="3dc-nI-ZUU"/>
                 <constraint firstItem="XjE-qG-xXC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="72u-fN-i6M"/>
-                <constraint firstItem="QCf-Un-Ufk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="100" id="Bdy-nP-Cwl"/>
+                <constraint firstItem="QCf-Un-Ufk" firstAttribute="centerX" secondItem="XjE-qG-xXC" secondAttribute="centerX" id="Egh-Qr-1m8"/>
                 <constraint firstItem="XjE-qG-xXC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="HNb-RN-zYT"/>
                 <constraint firstAttribute="trailing" secondItem="XjE-qG-xXC" secondAttribute="trailing" id="PUx-QL-Kdz"/>
                 <constraint firstItem="QCf-Un-Ufk" firstAttribute="centerY" secondItem="XjE-qG-xXC" secondAttribute="centerY" id="SAj-WS-uSs"/>
